use overflow: auto to fix #1667

--- a/frontend/css/journal-table.css
+++ b/frontend/css/journal-table.css
@@ -52,7 +52,7 @@
 }
 
 .journal .postings .num {
-  overflow: scroll;
+  overflow: auto;
   line-height: 16px;
 }
 
